# FastApi_BestPractices

./: .env.example  .gitignore  ApplicationExample.py  Dockerfile  Pipfile  README.md  all_reference.py  db.py  main.py  project_init.py  pyproject.toml  run.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/admin_api/: __init__.py  admin_api.py  admin_login_api.py  login_api.py
app/api/auth_api/: __init__.py  auth_api.py
app/api/demo_api/: __init__.py  demo_api.py
app/api/login_api/: __init__.py  login_api.py
app/api/test_api/: __init__.py  test_api.py
app/api/test_exception_api/: __init__.py  test_exception_api.py
app/api/user_api/: __init__.py  login_api.py  user_api.py
app/api/v1/: router.py
app/core/: config.py  exception_handlers.py  lifespan.py  middleware.py  pagination.py  password.py  response.py  security.py
app/db/: raw.py  redis_client.py  tortoise.py
app/models/: __init__.py  admin.py  aps_task.py  base.py
app/schemas/: common.py  pagination.py
app/tasks/: scheduler.py  tasks.py
app/utils/: time_utils.py
common/: __init__.py
common/libs/: __init__.py  api_result.py  auth.py  base_model.py  common_enum.py  common_page.py  common_paginate_query.py  common_pydantic_base.py  common_select.py  custom_exception.py
config/: __init__.py  config.py  pro.ini
docker/: .env.example  README.md  docker-compose.yml
scripts/: init_project.py
utils/: __init__.py  db_connect.py  password_context.py  print_logs.py  redis_connect.py  utils.py
utils/scheduled_tasks/: __init__.py  task_handler.py  tasks.py
(+11 files in other folders)
